@@ -1,3 +1,7 @@
+r123:
+Added : experimental lz4frame API, thanks to Takayuki Matsuoka and Christopher Jackson for testings
+Fix : test mode (-t) no longer requires confirmation, thanks to Thary Nguyen
+
 r122:
 Fix : AIX & AIX64 support (SamG)
 Fix : mips 64-bits support (lew van)
